[package]
name = "static_ref"
version = "0.1.0"
edition = "2021"
description = "Static Ref Macros & Functions"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full"] }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }